css/styles.css
body{
    padding: 0px;
    margin: 0px;
}


header{
    display: flex;
    height: 10vh;
    width: 100%;
    background-color: rgb(177, 65, 65);
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    border-bottom: grey solid 2.5px;
    z-index:10;
}

div.left{
    align-self: flex-start;
    padding-left: 4vw;
}
div.right{
    align-self: flex-end;
    padding-right: 4vw;
}
.logo{
font-family: fantasy;
color: black;
font-size: 4vw;
height: 4vw;
}

.menu {
padding-right: 1vw;
padding-left: 1vw;
font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
font-size: 1.5vw;
color: whitesmoke;
}

.menu:hover{
    color: black; 
}

.logo:hover{
    color: whitesmoke;
}

main{
    display: flex;
    flex-direction: column;
    border: 0px;
    margin: 0px;
}

div.title{
    height: 90vh;
    background:black;
    width: 100%;
    align-items: center;
    text-align: center;
    color: whitesmoke;
    background-image: url(../images/tech3.jpg);
}
div.about{
    background-color: whitesmoke;
    color: black;
    width: 100%;
}
div.portfolio{
    background-color: black;
    color: whitesmoke;
    width: 100%;
}
div.experience{
    background-color: whitesmoke;
    color: black;
    width: 100%;
}
div.contact{
    
    background-color: black;
    color: whitesmoke;
    width: 100%;
}
div.offset{
    height: 10vh;
    width: 100%;
}


footer{
    display: flex;
    height: 10vh;
    background-color: rgb(177, 65, 65);
    justify-content: center;
    align-items: center;
    align-content: center;
    color: whitesmoke;
    font-size: 2vw;
    border-top: grey solid 2.5px;
}


 p.one{
    text-align: center;
    font-size: 1.25vw;
    padding-top: 10vh;
    padding-right: 5vw;
}
p.two{
    text-align: center;
    font-size: 1.25vw;
    padding-top: 10vh;
    padding-left: 5vw;
}


h1{
font-size: 3vw;
padding: 5vh;
}
h2{
font-size: 3vw;
padding-top: 5vh;
padding-right: 5vw;
}
h3{
    font-size: 3vw;
    padding-top: 5vh;
    padding-left: 5vw;
}

button{
    background: none;
    border: none;
}

button:focus {
    outline:0;
}

#josh{
    width: 25vw;
    border: solid black 5px;
    margin: 10vh;
}

#github{
    width: 25vw;
}
  
#exp{
    width: 33vw;
    margin: 10vh;
    border: solid black 5px;
}

#cont{
    width: 33vw;
    margin: 10vh;
    border: solid whitesmoke 5px;
}

a{
    color:whitesmoke;
    font-size: 2vw;
}

a:hover{
    color: grey;
}




@media only screen and (max-width: 600px) {
    h1{
        font-size: 30pt;
    }
    h2{
        font-size: 30pt;
    }    
    h3{
        font-size: 30pt;
    }
    p{
        font-size: 15pt;
    }
    p.one{
        font-size: 15pt;
    }
    p.two{
        font-size: 15pt;
    }
    a{
        font-size: 15pt;
    }
    span.logo{
        font-size: 25pt;
    }
    span.menu{
        font-size: 12.5pt;
    }
}

